# jenkins-sdk-rust

./: .gitignore  .justfile  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yaml
examples/: artifact_download.rs  async_test.rs  blocking_test.rs  progressive_log.rs  request_hook.rs  retry_error_handling.rs  sync_test.rs  tls_root_store.rs  whoami.rs
src/: auth.rs  client_async.rs  client_blocking.rs  error.rs  lib.rs  raw.rs  request_hook.rs  tls.rs
src/api/: computers.rs  jobs.rs  mod.rs  people.rs  queue.rs  system.rs  users.rs  views.rs
src/client/: async_client.rs  blocking_client.rs  mod.rs
src/core/: endpoint.rs  error.rs  mod.rs  models.rs  url.rs
src/middleware/: crumb_async.rs  crumb_blocking.rs  mod.rs  retry_async.rs  retry_blocking.rs
src/transport/: async_transport.rs  blocking_transport.rs  metrics.rs  mod.rs  request.rs
src/transport/middleware/: crumb_async.rs  crumb_blocking.rs  hook_async.rs  hook_blocking.rs  mod.rs  retry.rs  retry_async.rs  retry_blocking.rs
src/types/: common.rs  computers.rs  jobs.rs  mod.rs  people.rs  queue.rs  system.rs  users.rs  views.rs
src/util/: diagnostics.rs  mod.rs  proxy_env.rs  redact.rs  url.rs
tests/: http_flows.rs
