[package]
name = "jenkins-sdk"
description = "Jenkins API SDK in pure Rust with async and blocking clients, typed endpoints, pluggable middleware, and zero magic strings."
version = "0.1.15"
edition = "2024"
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/jenkins-sdk-rust"
homepage = "https://github.com/lvillis/jenkins-sdk-rust"
documentation = "https://github.com/lvillis/jenkins-sdk-rust#readme"
include = [
    "Cargo.toml",
    "CHANGELOG.md",
    "README.md",
    "README.zh-CN.md",
    "src/**",
    "examples/**",
]

[workspace]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
reqwest = { version = "0.13.1", default-features = false, features = ["cookies", "rustls-tls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.148", default-features = false, features = ["std"] }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.48.0", default-features = false, features = ["sync"] }
url = { version = "2.5.7", default-features = false, features = ["std"] }
wiremock = { version = "0.6.5", default-features = false }

[features]
default = ["async-client"]
async-client = ["dep:reqwest", "dep:tokio", "dep:async-trait"]
blocking-client = ["dep:reqwest", "reqwest/blocking"]

[dependencies]
base64 = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

# async-only deps
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# HTTP stack
reqwest = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = { workspace = true }

[[example]]
name = "async_test"
path = "examples/async_test.rs"
required-features = ["async-client"]

[[example]]
name = "sync_test"
path = "examples/sync_test.rs"
required-features = ["blocking-client"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
