[package]
name = "jenkins-sdk"
description = "Jenkins API SDK in pure Rust with async and blocking clients, typed endpoints, pluggable middleware, and zero magic strings."
version = "0.1.16"
edition = "2024"
rust-version = "1.92.0"
autoexamples = false
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/jenkins-sdk-rust"
homepage = "https://github.com/lvillis/jenkins-sdk-rust"
documentation = "https://github.com/lvillis/jenkins-sdk-rust#readme"
include = [
  "Cargo.toml",
  "CHANGELOG.md",
  "README.md",
  "README.zh-CN.md",
  "src/**",
  "examples/**",
  "tests/**",
]

[workspace]
resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
httpdate = { version = "1.0.3", default-features = false }
metrics = { version = "0.24.3", default-features = false }
rustls = { version = "0.23.36", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", default-features = false, features = ["sync", "time"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
reqwest = { version = "0.13.1", default-features = false, features = ["cookies", "form", "query"] }
ureq = { version = "3.1.4", default-features = false, features = ["cookies", "gzip"] }
url = { version = "2.5.8", default-features = false, features = ["std"] }
wiremock = { version = "0.6.5", default-features = false }

[features]
default = ["async", "rustls"]

# Core modes
async = ["dep:reqwest", "dep:tokio", "dep:async-trait"]
blocking = ["dep:ureq"]

# TLS backend (choose exactly one)
rustls = ["dep:rustls", "reqwest?/rustls-no-provider", "ureq?/rustls"]
native-tls = ["reqwest?/native-tls", "ureq?/native-tls"]

# Backward-compatible aliases
async-client = ["async"]
blocking-client = ["blocking"]

tracing = ["dep:tracing"]
metrics = ["dep:metrics"]
unstable-raw = []

[dependencies]
base64 = { workspace = true }
http = { workspace = true }
httpdate = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }
url = { workspace = true }
metrics = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# async-only deps
async-trait = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# HTTP stack
reqwest = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = { workspace = true }

[[example]]
name = "async_test"
path = "examples/async_test.rs"
required-features = ["async"]

[[example]]
name = "whoami"
path = "examples/whoami.rs"
required-features = ["async"]

[[example]]
name = "progressive_log"
path = "examples/progressive_log.rs"
required-features = ["async"]

[[example]]
name = "artifact_download"
path = "examples/artifact_download.rs"
required-features = ["async"]

[[example]]
name = "blocking_test"
path = "examples/blocking_test.rs"
required-features = ["blocking"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
