[package]
name = "jenkins-sdk"
description = "Jenkins API SDK in pure Rust with async and blocking clients, typed endpoints, pluggable middleware, and zero magic strings."
version = "0.1.16"
edition = "2024"
rust-version = "1.93.0"
autoexamples = false
license = "MIT"
authors = ["lvillis<lvillis@outlook.com>"]
repository = "https://github.com/lvillis/jenkins-sdk-rust"
homepage = "https://github.com/lvillis/jenkins-sdk-rust"
documentation = "https://github.com/lvillis/jenkins-sdk-rust#readme"
include = [
  "Cargo.toml",
  "CHANGELOG.md",
  "README.md",
  "README.zh-CN.md",
  "src/**",
  "examples/**",
  "tests/**",
]

[features]
default = ["async-rustls-ring"]

# Core modes (building blocks)
async = ["dep:reqx", "dep:tokio", "dep:async-trait"]
blocking = ["dep:reqx"]

# Async matrix (choose exactly one async TLS backend when `async` is enabled)
async-rustls-ring = ["async", "reqx?/async-tls-rustls-ring"]
async-rustls-aws-lc-rs = ["async", "reqx?/async-tls-rustls-aws-lc-rs"]
async-native-tls = ["async", "reqx?/async-tls-native"]

# Blocking matrix (choose exactly one blocking TLS backend when `blocking` is enabled)
blocking-rustls-ring = ["blocking", "reqx?/blocking-tls-rustls-ring"]
blocking-rustls-aws-lc-rs = ["blocking", "reqx?/blocking-tls-rustls-aws-lc-rs"]
blocking-native-tls = ["blocking", "reqx?/blocking-tls-native"]

tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
http = { version = "1.4.0", default-features = false, features = ["std"] }
httpdate = { version = "1.0.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }
tracing = { version = "0.1.44", default-features = false, features = ["std"], optional = true }
url = { version = "2.5.8", default-features = false, features = ["std"] }
metrics = { version = "0.24.3", default-features = false, optional = true }

# async-only deps
async-trait = { version = "0.1.89", default-features = false, optional = true }
tokio = { version = "1.49.0", default-features = false, features = ["sync", "time"], optional = true }

# HTTP stack
reqx = { version = "0.1.22", default-features = false, optional = true }

[dev-dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
tokio = { version = "1.49.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
wiremock = { version = "0.6.5", default-features = false }

[[example]]
name = "async_test"
path = "examples/async_test.rs"
required-features = ["async"]

[[example]]
name = "whoami"
path = "examples/whoami.rs"
required-features = ["async"]

[[example]]
name = "progressive_log"
path = "examples/progressive_log.rs"
required-features = ["async"]

[[example]]
name = "artifact_download"
path = "examples/artifact_download.rs"
required-features = ["async"]

[[example]]
name = "request_hook"
path = "examples/request_hook.rs"
required-features = ["async"]

[[example]]
name = "retry_error_handling"
path = "examples/retry_error_handling.rs"
required-features = ["async"]

[[example]]
name = "tls_root_store"
path = "examples/tls_root_store.rs"
required-features = ["async"]

[[example]]
name = "blocking_test"
path = "examples/blocking_test.rs"
required-features = ["blocking"]

[package.metadata.release]
tag-prefix = ""
tag-name = "{{prefix}}{{version}}"
pre-release-commit-message = "chore: release {{crate_name}} version {{version}}"
tag-message = "chore: release {{crate_name}} version {{version}}"
pre-release-hook = ["git", "cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
